Z-Index y bug del slide

--- a/San Sernín de Toulouse/estiloromanico.css
+++ b/San Sernín de Toulouse/estiloromanico.css
@@ -30,6 +30,7 @@ nav.primary-navigation {
     padding: 15px 0 0 0;
     text-align: center;
     font-size: 16px;
+    z-index: 99999;
 }
 nav.primary-navigation ul li {
     list-style: none;
@@ -41,6 +42,7 @@ nav.primary-navigation ul li {
     text-decoration: none;
     text-align: center;
     font-family: arvo;
+    z-index: 99999;
 }
 nav.primary-navigation li a {
     color: black;
@@ -113,8 +115,8 @@ ul li ul li a {
 .slide-item {
     position: absolute;
     opacity: 0;
-    -webkit-transition: opacity 0.6s ease-out;
-    transition: opacity 0.6s ease-out;
+    -webkit-transition: opacity 0.5s ease-out;
+    transition: opacity 3s ease-out;
 }
 
 .slide-item img {
@@ -158,7 +160,8 @@ ul li ul li a {
 
 #slide-1:checked ~ .control-1,
 #slide-2:checked ~ .control-2,
-#slide-3:checked ~ .control-3 {
+#slide-3:checked ~ .control-3,
+#slide-4:checked ~ .control-4 {
     display: block;
 }
 
@@ -195,7 +198,9 @@ ul li ul li a {
 #slide-2:checked ~ .control-2 ~ .slide-indicador 
       li:nth-child(2) .slide-circulo,
 #slide-3:checked ~ .control-3 ~ .slide-indicador 
-      li:nth-child(3) .slide-circulo {
+      li:nth-child(3) .slide-circulo,
+#slide-4:checked ~ .control-4 ~ .slide-indicador 
+      li:nth-child(4) .slide-circulo {
     color: #428bca;
 }
 
